--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>main.</title>
+    <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -45,7 +45,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">always work and play</div>
+                <div class="text-1">welcome to</div>
                 <div class="text-2">the Avenue.</div>
                 <div class="text-3">digital & film gallery: <span class="typing"></span></div>
                 <a href="photography.html">💮🌸🌷🌼</a>
@@ -59,11 +59,21 @@
             <h2 class="title">who am i?</h2>
             <div class="info-content">
                 <div class="column left">
-                    <img src="images/thrifting_in_tokyo.jpg"  style="width:70%">
+                    <img src="images/me.jpg"  style="width:45%">
                 </div>
                 <div class="column right">
                     <div class="text">@annalisaochner <span class="typing-2"></span></div>
-                    <p>k-state engineering '26 | web design | photography </p>
+                    <p>k-state electrical engineering '25 | ksu solar club vice president 2023-2024  </p>
+                    <br>
+                    <br>
+                    <p>Hello! I am a sophomore in electrical engineering at Kansas State University, passionate about renewable energy and solar technology. 
+                        Currently, I serve as the Vice President of the KSU Solar Club, and am also active in a variety of student organizations, including the KSU Prosthetics Design team, Wildcat Wind Power, and the Society of Women Engineers (Women in Engineering Program) KSU chapter. 
+                        In addition to my academic tasks and commitments, I have worked on several personal projects to enhance my knowledge and skillset. This website is one of them!
+                        For more of my work, please view my resume below. 
+                            <p><a href="files/resume.pdf">resume.</a></p>
+                          </body>
+                        </html>
+                         </p>
                     <a href="#">main.</a>
                 </div>
             </div>
@@ -82,14 +92,14 @@
                         <br>
                         <p>Photograpy: 
                             <br> A cinematic view of the world. 
-                            Current images include locations in Japan and US. </p>
+                            Currently featuring Japan and the United States. </p>
                         <br>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-keyboard"> + <i class="fas fa-code"></i></i>
-                        <div class="text">webdev.</div>
+                        <div class="text">design.</div>
                         <br>
                         <p>Web UI/UX Design:
                             <br>
@@ -106,6 +116,10 @@
                         <br>
                         <p>the Avenue:
                             <br> Digital portfolio featuring photography and UI/UX design.
+                        <br>
+                        <br>
+                            <p>KSU Solar:
+                                <br> Website showcases information and accomplishments of the KSU Solar Club.
                         </p>
                     </div>
                 </div>
@@ -121,8 +135,8 @@
             <div class="toolbox-content">
                 <div class="column left">
                     <div class="text">☀️🌊🍉🌴⛱️🍦</div>
-                    <p>👩🏻‍💻 html | css | js </p>
-                    <p>📷 adobe photoshop & lightroom  </p>
+                    <p>👩🏻‍💻 made with: html | css | js </p>
+                    <p>📷 editing: adobe photoshop & lightroom  </p>
                     <a href="#">main.</a>
                 </div>
                 </div>
@@ -139,35 +153,35 @@
                     <div class="box">
                         <img src="gif/shinkansen.gif" alt="">
                         <div class="text">🚆 "shinkansen"</div>
-                        <p>Modern, high-speed train.</p>
+                        <p>kanagawa, japan</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="gif/capybara.gif" alt="">
                         <div class="text">🥥 "capybara"</div>
-                        <p>The original coconut dog.</p>
+                        <p>tochigi, japan</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="gif/shibuyafilm1.gif" alt="">
                         <div class="text">🌇 "the city"</div>
-                        <p>Metropolitan and chic.</p>
+                        <p>shibuya, japan</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="gif/convocation2022.gif" alt="">
                         <div class="text">👩‍🎓 "convocation"</div>
-                        <p>The opposite of graduation.</p>
+                        <p>manhattan, kansas</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="gif/sea.gif" alt="">
                         <div class="text">🏖️ - "the sea"</div>
-                        <p>The beach is the place to be.</p>
+                        <p>chigasaki, japan</p>
                     </div>
                 </div>
             </div>
@@ -180,54 +194,31 @@
             <h2 class="title">contact.</h2>
             <div class="contact-content">
                 <div class="column left">
-                    <h4><strong>for feedback.<br><br></strong></h4>
+                    <h4><strong>Linkedin: <a href="url">https://www.linkedin.com/in/annalisaochner/ </a><br><br></strong></h4>
                     <div class="text"></div>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head"></div>
-                                <div class="sub-title"><br>AO<br><br></div>
+                                <div class="sub-title"><br>Annalisa Ochner<br><br></div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head"></div>
-                                <div class="sub-title"><br>USA<br><br></div>
+                                <div class="sub-title"><br>Kansas State University<br><br></div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head"></div>
-                                <div class="sub-title"><br>theavenueportfolio@gmail.com<br><br></div>
+                                <div class="sub-title"><br>annalisaochner@gmail.com<br><br></div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="column right">
-                    <div class="text"></div>
-                    <form action="#">
-                        <div class="fields">
-                            <div class="field name">
-                                <input type="text" placeholder="Name" required>
-                            </div>
-                            <div class="field email">
-                                <input type="email" placeholder="Email" required>
-                            </div>
-                        </div>
-                        <div class="field">
-                            <input type="text" placeholder="Subject" required>
-                        </div>
-                        <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
-                        </div>
-                        <div class="button-area">
-                            <button type="submit">Send message</button>
-                        </div>
-                    </form>
-                </div>
             </div>
         </div>
     </section>
