--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         Currently, I serve as the Vice President of the KSU Solar Club, and am also active in a variety of student organizations, including the KSU Prosthetics Design team, Wildcat Wind Power, and the Society of Women Engineers (Women in Engineering Program) KSU chapter. 
                         In addition to my academic tasks and commitments, I have worked on several personal projects to enhance my knowledge and skillset. This website is one of them!
                         For more of my work, please view my resume below. 
-                            <p><a href="files/resume.pdf">resume.</a></p>
+                            <p><a href="files/resume.png">resume.</a></p>
                           </body>
                         </html>
                          </p>
