--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                 </div>
                 <div class="column right">
                     <div class="text">@annalisaochner <span class="typing-2"></span></div>
+                    <br>
                     <p>k-state electrical engineering '25 | ksu solar club vice president 2023-2024  </p>
                     <br>
                     <br>
                     <p>Hello! I am a sophomore in electrical engineering at Kansas State University, passionate about renewable energy and solar technology. 
                         Currently, I serve as the Vice President of the KSU Solar Club, and am also active in a variety of student organizations, including the KSU Prosthetics Design team, Wildcat Wind Power, and the Society of Women Engineers (Women in Engineering Program) KSU chapter. 
                         In addition to my academic tasks and commitments, I have worked on several personal projects to enhance my knowledge and skillset. This website is one of them!
-                        For more of my work, please view my resume below. 
-                            <p><a href="files/resume.png">resume.</a></p>
+                        For more of my work, please view my LinkedIn account at the bottom of the page.
                           </body>
                         </html>
                          </p>
