--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <ul class="menu">
                 <li><a href="#info" class="menu-btn">who am i?</a></li>
                 <li><a href="#projects" class="menu-btn">projects</a></li>
+                <li><a href="resume.html" class="menu-btn">resume</a></li>
                 <li><a href="#toolbox" class="menu-btn">toolbox</a></li>
                 <li><a href="#snippets" class="menu-btn">snippets</a></li>
                 <li><a href="photography.html" class="menu-btn">film</a></li>
@@ -48,7 +49,7 @@
                 <div class="text-1">welcome to</div>
                 <div class="text-2">the Avenue.</div>
                 <div class="text-3">digital & film gallery: <span class="typing"></span></div>
-                <a href="photography.html">💮🌸🌷🌼</a>
+                <a href="photography.html">learn more.</a>
             </div>
         </div>
     </section>
@@ -70,7 +71,9 @@
                     <p>Hello! I am a sophomore in electrical engineering at Kansas State University, passionate about renewable energy and solar technology. 
                         Currently, I serve as the Vice President of the KSU Solar Club, and am also active in a variety of student organizations, including the KSU Prosthetics Design team, Wildcat Wind Power, and the Society of Women Engineers (Women in Engineering Program) KSU chapter. 
                         In addition to my academic tasks and commitments, I have worked on several personal projects to enhance my knowledge and skillset. This website is one of them!
-                        For more of my work, please view my LinkedIn account at the bottom of the page.
+                        For more of my work, please view my resume below. 
+                        <br>
+                            <a href="resume.html">resume.</a>
                           </body>
                         </html>
                          </p>
@@ -226,3 +229,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
