--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>the Avenue.</title>
+    <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -124,6 +124,9 @@
                             <p>KSU Solar:
                                 <br> Website showcases information and accomplishments of the KSU Solar Club.
                         </p>
+                        <br>
+                        <a href="https://ksusolarclub.github.io/" style="text-decoration: none;color: pink;"><img src="files/ksusolarclub2023" style="width:10%"></a>
+
                     </div>
                 </div>
                </div>
@@ -197,7 +200,9 @@
             <h2 class="title">contact.</h2>
             <div class="contact-content">
                 <div class="column left">
-                    <h4><strong>Linkedin: <a href="url">https://www.linkedin.com/in/annalisaochner/ </a><br><br></strong></h4>
+                    <a href="https://www.linkedin.com/in/annalisaochner/" style="text-decoration: none;color: pink;"><img src="files/linkedin.png" style="width:5%"></a>
+                    <br>
+                    <br>
                     <div class="text"></div>
                     <div class="icons">
                         <div class="row">
@@ -229,4 +234,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
