--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
     <section class="resume" id="resume">
         <div class="max-width">
             <div class="resume-content">
-                <img src="files/Resume.png" alt="resume" style="width:100%">
+                <img src="files/AnnalisaOchnerResumeDecember2023.jpg" alt="resume" style="width:100%">
             </div>
         </div>
     </section>
